--- a/reports/report.qmd
+++ b/reports/report.qmd
@@ -10,7 +10,7 @@ In this assignment we used alot of sql tools to filter through data and create t
 
 
 ```{python}
-from helpers import create_database_engine, run_sql_and_return_html, run_sql_and_return_html, create_db_wrapper, execute_ddl_from_file, execute_ddl
+from helpers import create_database_engine, run_sql_and_return_df, run_sql_and_return_html, create_db_wrapper, execute_ddl_from_file, execute_ddl
 
 # Load these variables from .env file.
 config_map = {
